# Wikipedia_Pageview_ETL_Pipeline

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
dags/: configs.py  pageviews.py  wikipedia_pageview_dag.py
dags/core_sentiment/: dashboard.py
dags/core_sentiment/include/app/tasks/: cleanup.py  download_data.py  extract_data.py  file_operations.py  llm_filter.py  llm_filtering.py  load_filtered_data.py  load_raw_data.py  monitor.py  prefilter_data.py
dags/core_sentiment/include/app_config/: notifications.py  settings.py
dags/core_sentiment/include/configuration/: settings.py
dags/core_sentiment/include/sql/ddl/: classified_pageviews_view.sql  company_classifier_function.sql  company_overrides_table.sql  create_pageviews_table.sql  tables.sql
dags/core_sentiment/include/sql/queries/: biggest_company.sql  company_rankings.sql
dags/core_sentiment/include/src_bash/: download.sh
dags/core_sentiment/include/src_python/: download_data.py  load_to_db.py  pageviews_filtering_prompt.py  prefilter_data.py
dags/core_sentiment/include/utils/: airflow_tasks.py
dags/utils/: download_data.py  extract_data.py  load_to_db.py
logic/: load_to_db.py  logger.py
scripts/: run_local.sh  setup.sh
